Thu Nov  7 12:27:21 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdc_preauth.c (check_padata): Fixed error handling; in order for
		check_preauth to return successfully, there must be at
		least one preauth which succeeded, and no REQUIRED preauth
		system which failed.  If a preauth is marked SUFFICIENT,
		then the rest of the preauth list aren't checked.  Fixed
		bug where when none of the preauth types were recognized,
		an error message corresponding to stack garbage was printed.

Wed Nov  6 12:00:48 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (argv): Check the error return from krb5_init_context(),
 		and print an error message if necessary.

Mon Nov  4 22:29:30 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* main.c (initialize_realms): Remove rather pointless use of
 		krb5.conf to find the kdc.conf used to get the default
 		port list.  It's not useful for anything else, and will
		just confuse people.
		(init_realm): Reformat function to be readable.  Add error
		checking to call of krb5_read_realm_params

Wed Sep 18 16:03:26 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kdc_util.c: Added magic number to initializer of nolrentry.

Tue Sep 10 14:18:41 1996  Tom Yu  <tlyu@mit.edu>

	* krb5kdc.M: remove ".so man1/header.doc"

Fri Aug 23 14:22:45 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* kerberos_v4.c (check_princ): Assume an expiration date of zero means never expire.

Thu Aug  1 11:13:46 1996  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* configure.in (withval): Link -ldyn as it is needed by the kadm5
		shared library.  

Wed Jul 24 02:29:19 1996  Sam Hartman  <hartmans@mit.edu>

	* kerberos_v4.c (set_tgtkey): s/KRB4_#@/krb5_ui_4 so we work with
 	athena Kerberos.



Tue Jul 23 22:26:29 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Build logger.o from the libkadm5 directory.  This
 		is prepatory work towards eliminating the dependency on
 		libkadm5.  Ultimately we will probably need to rethink how